--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,9 +5,11 @@ set(CMAKE_CXX_STANDARD 17)
 
 add_executable(editor
         src/main.cpp
+        src/settings.cpp
         src/settings.h
         src/window.h
         src/filehandling.h
+        src/cursor.h
 )
 
 target_link_libraries(editor
